Update SAPFileChecker.java